# python-github-workflows

./: .pdm-python  Dockerfile  README.md  example.env  main.py  pyproject.toml  release.txt  requirements.txt  test_main.py
.github/: dependabot.yml
.github/workflows/: auto-pdm-deps-update.yml  deploy-heroku.yml  learn-github-actions.yml  manual_trigger.yml  publish-docker-image.yml  release-action.yml  run-on-deocker-image.yml
