[project]
name = "github-workflows"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aadesh-Baral", email = "elkloppiko@gmail.com"},
]
dependencies = [
    "fastapi==0.85.2",
    "uvicorn[standard]==0.19.0",
    "black==22.10.0",
    "requests==2.28.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
