[project]
name = "github-workflows"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aadesh-Baral", email = "elkloppiko@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "black>=24.10.0",
    "requests>=2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
